--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
       letter-spacing: 0.2em;
       text-transform: uppercase;
       background: linear-gradient(90deg, var(--primary), var(--secondary));
-      -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
@@ -156,10 +155,11 @@
 
   <!-- HERO -->
   <header>
-    <h1>Votre Nom</h1>
+    <h1>Laurent Maxime</h1>
     <p>
-      Analytics Engineer.
-      Je conçois des pipelines fiables, des modèles de données clairs et des fondations analytiques durables.
+      Data Analyst.
+      Diplômé d'une école d'ingénieur en informatique et technologies de l'information (INSA Rouen Normandie).
+      J'analyse les données pour produire des insights clairs, fiables et utiles aux décisions métier.
     </p>
     <a href="#about" class="cta">Explorer</a>
   </header>
@@ -169,12 +169,12 @@
     <div class="glass about">
       <h2>À propos</h2>
       <p>
-        Analytics Engineer orienté fiabilité et clarté.
-        Mon rôle est de transformer des données brutes et fragmentées en modèles robustes,
-        exploitables par les équipes data, produit et business.
+        Data Analyst, issu d'une formation d'ingénieur en informatique et technologies de l'information (Insa Rouen Normandie).
+        J'ai développé une approche structurée de l'analyse de données, alliant rigueur technique
+        et compréhension des enjeux métier.
         <br /><br />
-        Je me situe à l'interface entre l'ingénierie et l'analyse :
-        structurer, documenter et rendre la donnée digne de confiance.
+        Mon objectif est de transformer des données brutes en analyses lisibles,
+        afin d'aider les équipes à prendre des décisions éclairées.
       </p>
     </div>
   </section>
@@ -183,19 +183,21 @@
   <section>
     <section>
     <section>
-    <h2>Expertise</h2>
+    <section>
+    <section>
+    <h2>Compétences clés</h2>
     <div class="grid">
       <div class="card">
-        <h3>Data Modeling</h3>
-        <p>Modèles analytiques propres, normalisés et orientés usage métier.</p>
+        <h3>Analyse & BI</h3>
+        <p>Analyse de données, KPI, reporting, Power BI, restitution orientée métier.</p>
       </div>
       <div class="card">
-        <h3>Pipelines & Transformation</h3>
-        <p>ETL / ELT fiables, tests, fraîcheur et qualité des données.</p>
+        <h3>Base technique</h3>
+        <p>SQL, Python, bases de données, compréhension des systèmes informatiques.</p>
       </div>
       <div class="card">
-        <h3>Analytics Enablement</h3>
-        <p>Mise à disposition de données compréhensibles et actionnables.</p>
+        <h3>Environnement data</h3>
+        <p>Azure, Databricks, GitLab, notions de MDM et qualité des données.</p>
       </div>
     </div>
   </section>
@@ -204,19 +206,40 @@
   <section>
     <section>
     <section>
-    <h2>Systèmes & Projets</h2>
+    <section>
+    <section>
+    <h2>Expériences & Projets</h2>
     <div class="grid">
       <div class="card">
-        <h3>Data Warehouse Analytics</h3>
-        <p>Conception de couches analytiques au-dessus de données brutes hétérogènes.</p>
+        <h3>Mission Data / BI – Secteur Santé</h3>
+        <p>
+          Mission de 9 mois chez un grand acteur de la santé (Ramsay Santé),
+          dans le cadre de la mise en place d'un Master Data Management (MDM).
+          <br /><br />
+          Participation au pilotage des activités, à la conduite du changement,
+          à la conception de KPI sur Power BI ainsi qu'au développement d'une Web App
+          dédiée au suivi et à l'analyse des données.
+        </p>
       </div>
+
       <div class="card">
-        <h3>Framework de qualité des données</h3>
-        <p>Tests, documentation et monitoring pour garantir la confiance.</p>
+        <h3>Projet INSA certifié – Mission de consulting</h3>
+        <p>
+          Projet académique certifié mené comme une mission de consulting.
+          Réalisation d'un Proof of Concept (POC) visant à migrer des données
+          vers une base de données propre, structurée et documentée.
+          <br /><br />
+          Conception et implémentation de calculs de KPI sur les données migrées,
+          afin de permettre un suivi clair et exploitable des indicateurs métier.
+        </p>
       </div>
+
       <div class="card">
-        <h3>Self-Service Analytics</h3>
-        <p>Structuration des données pour autonomie des équipes métier.</p>
+        <h3>Analyse du marché immobilier</h3>
+        <p>
+          Analyse du prix de l'immobilier en Californie : exploration des données,
+          identification des facteurs clés et visualisation des tendances.
+        </p>
       </div>
     </div>
   </section>
@@ -226,14 +249,13 @@
     <div class="glass">
       <h2>Contact</h2>
       <p style="color:var(--muted); line-height:1.7; font-size:0.9rem">
-        email@exemple.com<br />
-        LinkedIn / GitHub / Réseaux
+        maxime.laurent02@icloud.com<br />
       </p>
     </div>
   </section>
 
   <footer>
-    © 2026 – Site personnel futuriste
+    © 2026 – Laurent Maxime
   </footer>
 
 </body>
