--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       letter-spacing: 0.2em;
       text-transform: uppercase;
       background: linear-gradient(90deg, var(--primary), var(--secondary));
+      -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
